--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My website
+title: WHISPER - 1st Workshop on Hidden Information, Steganography, Privacy, and Emerging Risks
 
 # Your name to show in the footer
 author: Some Person
