--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author: WHISPER2025
 ###############################################
 
 navbar-links:
+  Home: "home"
   About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
