--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,8 @@ author: WHISPER2025
 ###############################################
 
 navbar-links:
-  Home: "home"
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Home: "index"
+  Call for Papers: "aboutme"
 
 ################
 # --- Logo --- #
