--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: WHISPER2025
 
 navbar-links:
   Home: "index"
-  Call for Papers: "aboutme"
+  Call for Papers: "cfp"
   Organizers: "organizers"
 
 ################
